@@ -1,0 +1,10 @@
+package image
+
+import (
+	"github.com/watermint/toolbox/quality/recipe/qtr_endtoend"
+	"testing"
+)
+
+func TestPlaceholder_Exec(t *testing.T) {
+	qtr_endtoend.TestRecipe(t, &Placeholder{})
+}
