@@ -2618,6 +2618,18 @@
   "recipe.util.git.clone.flag.url": "Git repository url",
   "recipe.util.git.clone.title": "Clone git repository",
   "recipe.util.git.title": "Git utility",
+  "recipe.util.image.placeholder.cli.args": "-path /LOCAL/PATH/TO/save.png",
+  "recipe.util.image.placeholder.flag.color": "Background color",
+  "recipe.util.image.placeholder.flag.font_size": "Font size",
+  "recipe.util.image.placeholder.flag.height": "Height (pixel)",
+  "recipe.util.image.placeholder.flag.path": "Path to export generated path",
+  "recipe.util.image.placeholder.flag.text": "Text if you need",
+  "recipe.util.image.placeholder.flag.text_align": "Text alignment",
+  "recipe.util.image.placeholder.flag.text_color": "Text color",
+  "recipe.util.image.placeholder.flag.text_position": "Text position",
+  "recipe.util.image.placeholder.flag.width": "Width (pixel)",
+  "recipe.util.image.placeholder.title": "Create placeholder image",
+  "recipe.util.image.title": "Image commands",
   "recipe.util.qrcode.create.cli.args": "-out /LOCAL/PATH/TO/create_qrcode.png",
   "recipe.util.qrcode.create.flag.error_correction_level": "Error correction level (l/m/q/h).",
   "recipe.util.qrcode.create.flag.mode": "QR code encoding mode",
