@@ -1,2 +1,3 @@
 * Bug fixes #558
 * #559 : Dropbox Business team admin commands
+* #563 : Placeholder command
